--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -314,7 +314,7 @@
 
       {
         "type": "standard",
-        "name": "Стандартый",
+        "name": "Стандартный",
         "views": "от 300 000 просмотров",
         "price": "5 500 000 сум",
         "info": "Оптимальный тариф для продвижения малого бизнеса",
@@ -381,7 +381,6 @@
         "img": "customer3.jpg",
         "text": "Этот маркетплейс стал для меня надежным партнером в сфере продажи рекламы. Интуитивно понятный интерфейс, широкие возможности таргетирования и отличная видимость результатов. Сотрудничество с ним стало ключевым элементом моей рекламной стратегии. Спасибо за отличный сервис!"
       },
-
       {
         "name": "customer 1",
         "workplace": "CocaCola Uzbekistan",
@@ -1021,6 +1020,7 @@
       }
     }
   },
+  
   "profile": {
     "title": "Настройка профиля",
     "account_block": {
@@ -2024,12 +2024,10 @@
         }
       }
     },
-
     "turnkey": {
       "success": "Тариф куплен",
       "error": "Ошибка покупки тарифа"
     },
-
     "websocket": {
       "new_message": "У вас новое сообщение",
       "new_notification": "У вас новое уведомление"
@@ -2193,7 +2191,8 @@
       },
       "post": {
         "success": "Пост успешно создан",
-        "error": "Ошибка в создании поста"
+        "error": "Ошибка в создании поста",
+        "empty_error": "Заполните все посты"
       },
       "payment": {
         "success": "Рекламная кампания успешно оплачена и запущена!",
@@ -2201,7 +2200,8 @@
       },
       "date": {
         "error": "Ошибка в создании дат для каналов",
-        "add_dates_error": "Нужно заполнить даты в заказах"
+        "add_dates_error": "Нужно заполнить даты в заказах",
+        "empty_orders_error": "Сначала нужно добавить каналы в корзину"
       },
       "create_order": {
         "error": "Произошла ошибка"
