fix: fix routing and adminHome page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2252,6 +2252,30 @@
       "complaints": "Жалобы",
       "reviews": "Отзывы"
     },
+    "home": {
+      "title": "Админ-панель",
+      "text": "Добро пожаловать! Здесь вы можете управлять ключевыми аспектами платформы.",
+      "channels": {
+        "title": "Каналы",
+        "text": "Создавайте, редактируйте и удаляйте каналы. Полный контроль в ваших руках!"
+      },
+      "users": {
+        "title": "Пользователи",
+        "text": "Следите за активностью пользователей, модерируйте аккаунты и управляйте правами доступа."
+      },
+      "transactions": {
+        "title": "Транзакции",
+        "text": "Отслеживайте финансовые операции, проверяйте платежи и следите за движением средств."
+      },
+      "reviews": {
+        "title": "Отзывы",
+        "text": "Анализируйте пользовательские отзывы, управляйте комментариями и улучшайте сервис."
+      },
+      "complaints": {
+        "title": "Жалобы",
+        "text": "Рассматривайте жалобы пользователей, реагируйте на проблемы и обеспечивайте честную платформу."
+      }
+    },
     "channels": {
       "bar": {
         "id": "Название&ID",
