fix: fix manager sidebar

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -152,6 +152,7 @@
     "calculateIncome": "Рассчет дохода",
 
     "orders": "Мои Рекламные Кампании",
+    "manager_orders": "Рекламные заказы",
 
     "saved": "Сохранненые",
     "manager": "Работа с менеджерами",
