fix: fix admin buttons complaint

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2511,8 +2511,8 @@
           "make_decision": "Принять решение",
           "see_decision": "Показать решение",
           "decision": "Принять решение",
-          "reject": "Отклонить",
-          "accept": "Принять",
+          "reject": "За Рекламодателя",
+          "accept": "За Блогера",
           "ok": "Хорошо"
         },
 
