fix: fix admin ban logic

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2318,6 +2318,26 @@
           "inactive": "Деактивированный",
           "banned": "Заблокированный",
           "deleted": "Удаленный"
+        },
+
+
+        "ban": {
+          "title": "Блокировка канала",
+          "reason": {
+            "title": "Причина блокировки",
+            "default_value": "Напишите причину ...",
+            "error": {
+              "required": "поле не может быть пустым"
+            }
+          },
+          "date": {
+            "title": "Дата окончания блокировки",
+            "default_value": "22.09.2023",
+            "description": "Введите дату окончания блокировки в формате ДД.ММ.ГГГГ.",
+            "error": {
+              "required": "неверный формат, введите по формату дд.мм.гггг: 22.09.2023"
+            }
+          }
         }
       }
     },
