--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -928,7 +928,7 @@
       "link": {
         "title": "Укажите ссылку",
         "text": "Yкажите ссылку на ваш канал, сохраняя необходимый формат",
-        "requerd": "Введите ссылку на канал",
+        "required": "Введите ссылку на канал",
         "invalid": "Ссылка недействительна"
       }
     },
@@ -2046,7 +2046,17 @@
       "link": {
         "success": "Идентификация канала прошла успешно",
         "error": "При идентификации канала произошла ошибка",
-        "alert": "К сожалению время истекло, обновите страницу и попробуйте заново"
+        "alert": "К сожалению время истекло, обновите страницу и попробуйте заново",
+        "channelStatus": {
+          "active": "Такой канал уже существует",
+          "banned": "Вы пытаетесь добавить заблокированный канал",
+          "deleted": "Вы пытаетесь добавить удалённый канал",
+          "inactive": "Вы пытаетесь добавить неактивный канал",
+          "moderation": "Канал находится на модерации",
+          "moderationReject": "Канал не прошел модерацию",
+          "remoderation": "Канал отправлен на повторную модерацию",
+          "invalidUrl": "Некорректная ссылка на канал"
+        }
       },
       "create": {
         "success": "Добавление канала прошло успешно",
