--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2600,5 +2600,10 @@
       "clear": "Очистить",
       "close": "Закрыть"
     }
+  },
+
+  "not_found": {
+    "description": "Страница не найдена",
+    "home_link": "Вернуться на главную"
   }
 }
