feat: rate/grade & replace loading & order/offer/channel link to channel page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -158,7 +158,7 @@
     "template": "Post templates",
 
     "platforms": "My channels",
-    "offers": "My requests",
+    "offers": "My offers",
 
     "wallet": "Wallet",
 
