--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -159,7 +159,7 @@
     "template": "Шаблоны постов",
 
     "platforms": "Мои каналы",
-    "offers": "Мои заявки",
+    "offers": "Мои заказы",
 
     "wallet": "Кошелёк",
 
